force-app/main/default/objects/Otp_Config__c/Otp_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description
  >Protected hierarchy custom setting holding the OTP secret pepper, from-address, and tunables (TTL, attempt cap, rate limit). The org-default record is populated post-deploy and is NOT source-controlled so no secret is committed. OtpService falls back to safe constants when unset.</description>
    <label>OTP Config</label>
</CustomObject>