force-app/main/default/objects/Otp_Config__c/fields/Code_Ttl_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Code_Ttl_Seconds__c</fullName>
    <description
  >Code lifetime in seconds. When blank, defaults to 600 (10 minutes).</description>
    <label>Code TTL Seconds</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>