force-app/main/default/objects/Otp_Config__c/fields/From_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Address__c</fullName>
    <description
  >Verified OrgWideEmailAddress to send the code from. When blank, the org default from-address is used.</description>
    <label>From Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>