force-app/main/default/objects/Otp_Config__c/fields/Max_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Attempts__c</fullName>
    <description
  >Max verify attempts per code before lockout. When blank, defaults to 5.</description>
    <label>Max Attempts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>