force-app/main/default/objects/Otp_Config__c/fields/Pepper__c.field-meta.xml
<CustomField>
    <fullName>Pepper__c</fullName>
    <description
  >Server-side secret mixed into every code hash. Populate on the org-default record post-deploy; leave blank in source. When blank, hashing degrades to per-record salt only.</description>
    <label>Pepper</label>
    <length>128</length>
    <type>Text</type>
</CustomField>