force-app/main/default/objects/Otp_Config__c/fields/Rate_Limit_Max__c.field-meta.xml
<CustomField>
    <fullName>Rate_Limit_Max__c</fullName>
    <description
  >Max codes that may be generated for one email within the rate-limit window. When blank, defaults to 5.</description>
    <label>Rate Limit Max</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>