force-app/main/default/objects/Otp_Config__c/fields/Rate_Limit_Window_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Rate_Limit_Window_Seconds__c</fullName>
    <description
  >Rate-limit window in seconds for per-email generation. When blank, defaults to 600.</description>
    <label>Rate Limit Window Seconds</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>